tdf#124654 Don't reopen closed sidebar decks

NotifyResize was called after a deck was closed,
so this is the wrong place to ensure minimum sidebar width.

Change-Id: I5a03dc1ee24257d49673db58bffbda1a7358cf3a